2007-10-16  Martin Lambers <marlam@marlam.de>

	* src/interpolation_selector.cpp, src/viewpoint_selector.cpp: Add
	keyboard shortcuts to buttons.
	* src/pseudocolor_selector.cpp, src/frame_info.h,
	src/channel_selector.h, src/datafile.h, src/cvlview.cpp, src/main.cpp,
	src/interpolation_selector.cpp, src/gamma_selector.h,
	src/channel_info.h, src/viewpoint_selector.h, src/range_selector.h,
	src/pseudocolor_selector.h, src/frame_info.cpp,
	src/channel_selector.cpp, src/datafile.cpp, src/gamma_selector.cpp,
	src/channel_info.cpp, src/cvlview.h, src/viewpoint_selector.cpp,
	src/Makefile.am, src/interpolation_selector.h, src/range_selector.cpp:
	Support multiple data sets in single data files. Reset settings if and
	only if a new data file is opened; preserve them when switching data
	sets.
	* configure.ac, NEWS, doc/cvlview.texi: Bump version to 0.2.0.
	* src/channel_selector.h, src/channel_selector.cpp: Preserve channel
	setting when switching between data sets in the same data file.
	* gnulib/m4/lseek.m4, gnulib/m4/fseeko.m4, gnulib/m4/ftello.m4, 
	gnulib/m4/gnulib-comp.m4, gnulib/m4/gnulib-cache.m4, gnulib/fseeko.c,
	gnulib/lseek.c, gnulib/ftello.c, gnulib/Makefile.am: Add gnulib fseeko
	and ftello modules for W32 portability.
	* src/cvlview.cpp: Print CVL version in AboutBox.
	* configure.ac: Require CVL >= 0.2.2.

2007-10-11  Martin Lambers <marlam@marlam.de>

	* src/pixel_info.cpp, src/channel_info.cpp: Print numbers with higher
	precision.

2007-10-09  Martin Lambers <marlam@marlam.de>

	* mhlib/mh_os.h, mhlib/mh_os.c, src/main.cpp: Rename DIRSEP to
	MH_DIRSEP. Update the users accordingly.

2007-10-03  Martin Lambers <marlam@marlam.de>

	* configure.ac, doc/cvlview.texi, doc/cvlview.1, NEWS: Update for
	version 0.1.2.

2007-09-18  Martin Lambers <marlam@marlam.de>

	* src/view_area.cpp: Do not fail on images where a channel contains 
	only a single value, and therefore min == max. Bug reported by Maik
	Keller <keller@fb12.uni-siegen.de>.